--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -46,6 +46,15 @@ body
 	padding-right:30px;
 }
 
+@media (max-width: 768px)
+{
+    .container
+    {
+        padding-left:15px;
+        padding-right:15px;
+    }
+}
+
 .container-fluid
 {
 	margin-right:auto;
