--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,7 @@ $font-size-h4: 16px;
 
 // this is the max width for medium and large screens (not too large)
 $container-sm: auto;
+$container-lg: 970px;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
