--- a/app/views/page/_content.html.erb
+++ b/app/views/page/_content.html.erb
@@ -13,7 +13,7 @@
 	<% end %>
 
 	<% if current_user.can_submit? and @page.pset %>
-	<section id="submit-content" class="visible-md-inline-block visible-lg-inline-block">
+	<section id="submit-content" class="visible-md-block visible-lg-block">
 		<%= render 'submit_tab' %>
 	</section>
 	<% end %>
