--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -3,7 +3,7 @@ body
 	-webkit-font-smoothing: subpixel-antialiased;
 	line-height:1.2em;
 	spadding-top:82px;
-	background-color:#FCFCFC;
+	background-color:#f3f3f3;
 	background-size:cover;
 	background-attachment: fixed;
 }
@@ -19,10 +19,10 @@ body
     background-color: $color3;
     color: $color1;
     border:0;
-    margin-left: calc(-50vw + 50%);
+/*     margin-left: calc(-50vw + 50%);
     padding-left: calc(50vw - 50%);
     margin-right: calc(-50vw + 50%);
-    padding-right: calc(50vw - 50%);
+    padding-right: calc(50vw - 50%); */
 }
 
 
@@ -50,8 +50,8 @@ body
 {
     .container
     {
-        padding-left:15px;
-        padding-right:15px;
+        //padding-left:15px;
+        //padding-right:15px;
     }
 }
 
@@ -71,6 +71,11 @@ body
  *
  */
 
+#content
+{
+	background-color:#fefefe
+}
+
 #content section, #content header
 {
 	margin-bottom:1.5em;
@@ -87,8 +92,8 @@ body
 
 #content h1, #content .videoblock
 {
-    padding-top: 1.5em;
-    padding-bottom: 1.5em;
+    padding-top: 1em;
+    padding-bottom: 1em;
     background-color: #F25D50;
     color:white;
     margin-top: 1em;
@@ -104,24 +109,30 @@ body
 
 #content .videoblock
 {
-    margin-left: calc(-50vw + 50%);
-    margin-right: calc(-50vw + 50%);
+    //margin-left: calc(-50vw + 50%);
+    //margin-right: calc(-50vw + 50%);
+    margin-left:-2em;
+    margin-right:-2em;
 }
 
 @media (max-width: 768px) {
     #content .videoblock
     {
-        margin-left:-1em;
-        margin-right:-1em;
+        margin-left:-2em;
+        margin-right:-2em;
     }
 }
 	
 #content h1
 {
-    margin-left: calc(-50vw + 50%);
+/*     margin-left: calc(-50vw + 50%);
     padding-left: calc(50vw - 50%);
     margin-right: calc(-50vw + 50%);
-    padding-right: calc(50vw - 50%);
+    padding-right: calc(50vw - 50%); */
+	margin-right:-1em;
+	margin-left:-1em;
+	padding-left:1em;
+	padding-right:1em;
 }
 
 #content header
