--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,11 +1,6 @@
 <nav id="sidebar" class="collapse">
 	<button type="button" class="close" data-toggle="collapse" data-target="#sidebar" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	<ul class="sidebar-menu">
-		<!--
-		<li class="dropdown-header"><span><strong><%= current_user.name %></strong></span></li>
-		<li><%= link_to "#{fa_icon 'bullhorn', class: 'fa-fw'} Feedback".html_safe, profile_grades_path %></li>
-		<li><%= link_to "#{fa_icon 'sign-out', class: 'fa-fw'} Logout".html_safe, profile_logout_path %></li>
-		-->
 		<%= render 'layouts/materials' %>
 	</ul>
 </nav>
@@ -20,14 +15,14 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a href="/" class="navbar-brand"><%= fa_icon "home" %> <span class="hidden-xs hidden-sm"><%= Settings.short_course_name %></span> <span class="label label-default hidden-xs hidden-sm"><%= @schedule_name %></span></span></a>
+			<a href="/" class="navbar-brand"><%= fa_icon "home" %>
+				<span class=""><%= Settings.short_course_name %></span>
+				<span class="hidden-xs hidden-sm"><small><%= @schedule_name %></small></span>
+			</a>
 		</div>
 			
-		<div class="collapse navbar-collapse" style="float:left;">
-
-
+		<div id="menu-nav" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				
 				<% if logged_in? && @schedule %>
 				<li class="dropdown hidden-xs">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Current <span class='caret'></span></a>
@@ -51,63 +46,55 @@
 				<% end %>
 			</ul>
 		</div>
-		
-		
-		
-		
-			<ul id="icon-nav" class="nav navbar-nav navbar-right">
-				<% if !Settings.mail_address.blank? && logged_in? && (@alerts.count > 0 || @current_user.admin?) %>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "bell-o", class: "fa-fw" %></a>
-					<ul class="dropdown-menu">
-						<%= render 'layouts/alerts' %>
-					</ul>
-				</li>
-				<% end %>
 
-				<% if Settings.hands_allow && current_user.valid_profile? %>
-				<li class="dropdown" id="ama-nav">
-					<a href="#" id="ama-dd" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "hand-pointer-o", class: "fa-fw" %></a>
-					<ul class="dropdown-menu">
-						<%= render 'layouts/ama' %>
-					</ul>
-				</li>
-				<% end %>
+		<ul id="icon-nav" class="nav navbar-nav navbar-right">
+			<% if !Settings.mail_address.blank? && logged_in? && (@alerts.count > 0 || @current_user.admin?) %>
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "bell-o", class: "fa-fw" %></a>
+				<ul class="dropdown-menu">
+					<%= render 'layouts/alerts' %>
+				</ul>
+			</li>
+			<% end %>
 
-				<% if current_user.submits.any? %>
-				<li class="dropdown">
-					<a href="/profile/grades" data-toggle="tooltip" data-placement="bottom" title="Feedback"><%= fa_icon "bullhorn", class: "fa-fw" %></a>
-				</li>
-				<% end %>
+			<% if Settings.hands_allow && current_user.valid_profile? %>
+			<li class="dropdown" id="ama-nav">
+				<a href="#" id="ama-dd" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "hand-pointer-o", class: "fa-fw" %></a>
+				<ul class="dropdown-menu">
+					<%= render 'layouts/ama' %>
+				</ul>
+			</li>
+			<% end %>
 
-				<% if logged_in? and current_user.assistant? or current_user.head? or current_user.admin? %>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= fa_icon "tasks", class: "fa-fw" %></a>
-					<ul class="dropdown-menu" id="user-menu">
-						<%= render 'layouts/menu' %>
-					</ul>
-				</li>
-				<li><%= link_to "#{fa_icon 'sign-out', class: 'fa-fw'}".html_safe, profile_logout_path %></li>
+			<% if current_user.submits.any? %>
+			<li class="dropdown">
+				<a href="/profile/grades" data-toggle="tooltip" data-placement="bottom" title="Feedback"><%= fa_icon "bullhorn", class: "fa-fw" %></a>
+			</li>
+			<% end %>
+
+			<% if logged_in? and current_user.assistant? or current_user.head? or current_user.admin? %>
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= fa_icon "tasks", class: "fa-fw" %></a>
+				<ul class="dropdown-menu" id="user-menu">
+					<%= render 'layouts/menu' %>
+				</ul>
+			</li>
+			<li><%= link_to "#{fa_icon 'sign-out', class: 'fa-fw'}".html_safe, profile_logout_path %></li>
 				
-				<p class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></p>
-				<% elsif logged_in? %>
-				<p class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></p>
-				<% elsif authenticated? %>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user && current_user.name || session[:cas_user] %></a>
-					<ul class="dropdown-menu" id="user-menu">
-						<%= render 'profile/edit' %>
-					</ul>
-				</li>
-				<% else %>
-				<li><%= link_to("Sign in".html_safe, CASClient::Frameworks::Rails::Filter.login_url(controller))%></li>
-				<% end %>
-			</ul>
-
-
-
-
-
+			<p class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></p>
+			<% elsif logged_in? %>
+			<p class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></p>
+			<% elsif authenticated? %>
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user && current_user.name || session[:cas_user] %></a>
+				<ul class="dropdown-menu" id="user-menu">
+					<%= render 'profile/edit' %>
+				</ul>
+			</li>
+			<% else %>
+			<li><%= link_to("Sign in".html_safe, CASClient::Frameworks::Rails::Filter.login_url(controller))%></li>
+			<% end %>
+		</ul>
 
 	</div>
 </nav>
