--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -16,10 +16,12 @@
 			<% else %>
 			<li><%= link_to 'Mark as active', user_path(id: @student.id, user: { active: true }), method: :put %></li>
 			<% end %>
+			<% if current_user.admin? %>
 			<li role="separator" class="divider"></li>
 			<li><%= link_to 'Make assistant', user_path(id: @student.id, user: { role: :assistant }), method: :put %></li>
 			<li><%= link_to 'Make head', user_path(id: @student.id, user: { role: :head }), method: :put %></li>
 			<li><%= link_to 'Make admin', user_path(id: @student.id, user: { role: :admin }), method: :put %></li>
+			<% end %>
 			<li role="separator" class="divider"></li>
 			<li><%= link_to_if GradeTools.available?, 'Calculate final grade', user_calculate_final_grade_path(user_id: @student.id), method: :post %></li>
 		</ul>
