--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -1,10 +1,10 @@
+		<h1><%= @pset.name %><br><small> by <%= @user.name %> <%= "/ #{@submit.used_login}" if @submit %> <span class="label label-primary"><%= @grade.status %></span></small></h1>
+
 <%= form_for([ @submit, @grade ], url: submit_grade_path, method: :put) do |f| %>
 <%= hidden_field_tag :referer, request.referer %>
 
 <div class="row" style="display:flex">
 	<div class="col-xs-12 col-sm-8" style="background-color:white">
-
-		<h1><%= @pset.name %><br><small> by <%= @user.name %> <%= "/ #{@submit.used_login}" if @submit %> <span class="label label-primary"><%= @grade.status %></span></small></h1>
 
 		<% if @grade.errors.any? %>
 		<div id="error_explanation">
@@ -120,7 +120,7 @@
 
 			<div class="form-group">
 				<div class="col-sm-offset-3 col-sm-9">
-					<% if current_user.admin? || !@grade.done %>
+					<% if current_user.admin? || @grade.open? %>
 					<%= f.submit class: 'btn btn-primary form-control' %>
 					<% end %>
 				</div>
@@ -152,11 +152,12 @@
 	
 <% end %>
 
-<% if current_user.admin? and @submit %>
+<% if current_user.senior? and @submit %>
 <hr>
 <p>
+<% if current_user.admin? %>
 <%= link_to "Destroy submit completely", submit_path(id: @submit.id, referer: request.referer), method: :delete, data: { confirm: "Sure? This removes proof of student submitting. If you want to delete the grade, just empty text field and save the grade." }, class: 'btn btn-danger' if @submit %>
+<% end %>
 <%= link_to_if @submit.grade, "Publish this grade now", submit_grade_path(submit_id: @submit.id, grade: { status: :published }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-default' %>
-<%= link_to_if @submit.grade, "Re-open this grade", submit_grade_path(submit_id: @submit.id, grade: { status: :open }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-default' %>
 </p>
 <% end %>
