--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -7,6 +7,9 @@
 			<% @grade.subgrades.each_pair do |k,v| %>
 			<%= v %> /
 			<% end %>
+			<% if current_user.senior? %>
+			<strong><%= translate_grade(@grade.any_final_grade) %></strong>
+			<% end %>
 		</div>
 	</div>
 	<div class="panel-body">
@@ -14,4 +17,7 @@
 	</div>
 </div>
 
-<%= button_to "Mark as Discussed", submit_grade_path(submit_id: @submit.id, grade: { status: :discussed }, referer: submits_discuss_path), method: :put, data: { confirm: "Sure?" }, class: 'btn' %>
+<%= link_to "Mark as Discussed", submit_grade_path(submit_id: @submit.id, grade: { status: :discussed }, referer: submits_discuss_path), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-primary' %>
+<% if current_user.senior? && @submit.grade %>
+<%= link_to "Re-open this grade", submit_grade_path(submit_id: @submit.id, grade: { status: :open }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-default' %>
+<% end %>
