--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -52,16 +52,20 @@
 	</table>
 
 	<p>
-		<% if current_user.admin? %>
+		<% if current_user.senior? %>
 		<%= link_to '<i class="glyphicon glyphicon-ok"></i> Publish what\'s done'.html_safe, students_mark_all_public_path(pset: params[:pset], group: params[:group]), method: 'post', class: 'btn btn-default', data: { confirm:'Are you sure?' } %>
 		<% end %>
+		<% if current_user.admin? %>
 		<%= link_to '<i class="glyphicon glyphicon-user"></i> Import Groups'.html_safe, admin_import_path, class:'btn btn-default' %>
 		<%= link_to '<i class="glyphicon glyphicon-user"></i> Generate Groups'.html_safe, admin_generate_groups_path(schedule_id: @current_schedule && @current_schedule.id), class:'btn btn-default' %>
 		<%= link_to '<i class="glyphicon glyphicon-th"></i> Export Grades for Excel'.html_safe, admin_export_grades_path(format: 'xls'), class:'btn btn-default' %>
 		<%= link_to '<i class="glyphicon glyphicon-print"></i> Dump Grades for archiving'.html_safe, admin_dump_grades_path, class:'btn btn-default' %>
 		<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Statistics'.html_safe, admin_stats_path, class:'btn btn-default' %>
+		<% end %>
+		<% if current_user.admin? %>
 		<% if GradeTools.available? %>
 		<%= link_to '<i class="glyphicon glyphicon-modal-window"></i> Calculate final grades'.html_safe, students_assign_final_grade_path, method: :put, class: 'btn btn-default', data: { confirm:'Are you sure?' } %>
+		<% end %>
 		<% end %>
 	</p>
 
