--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -138,7 +138,9 @@
 					<% grade.subgrades.each_pair do |k,v| %>
 					<%= v %> /
 					<% end %>
+					<% if current_user.admin? %>
 					<strong><%= translate_grade(grade.any_final_grade) %></strong>
+					<% end %>
 				</div>
 			</div>
 			<div class="panel-body">
