--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -6,6 +6,7 @@
 			<th>Name</th>
 			<th></th>
 			<th></th>
+			<th></th>
 			<th>Attend</th>
 			<th class="rotate">Spoken</th>
 			<th class="rotate">Status</th>
@@ -24,6 +25,10 @@
 				<% if user.notes.present? %>
 				<span class="glyphicon glyphicon-pencil" data-toggle="tooltip" data-placement="right" title="<%= user.notes %>"></span>
 				<% end %>
+			</td>
+			
+			<td>
+				<%= user.last_known_location %>
 			</td>
 			
 			<td>
