--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<%= @grade.submit.pset.name %> <%= "/ #{@submit.used_login}" if @submit %>
+		<strong><%= @grade.submit.pset.name %></strong> <%= "/ #{@submit.used_login}" if @submit %> / <strong><%= @grade.status %></strong>
 		<div class="pull-right">
 			<% @grade.subgrades.each_pair do |k,v| %>
 			<%= v %> /
@@ -17,7 +17,9 @@
 	</div>
 </div>
 
+<% if @grade.published? %>
 <%= link_to "Mark as Discussed", submit_grade_path(submit_id: @submit.id, grade: { status: :discussed }, referer: submits_discuss_path), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-primary' %>
+<% end %>
 <% if current_user.senior? && @submit.grade %>
 <%= link_to "Re-open this grade", submit_grade_path(submit_id: @submit.id, grade: { status: :open }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-default' %>
 <% end %>
