--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -16,13 +16,9 @@ body
 .alert
 {
 	margin-bottom:0;
-    background-color: $color3;
-    color: $color1;
     border:0;
-/*     margin-left: calc(-50vw + 50%);
-    padding-left: calc(50vw - 50%);
-    margin-right: calc(-50vw + 50%);
-    padding-right: calc(50vw - 50%); */
+    margin: 0 -2em;
+    padding: 1em 2em;
 }
 
 
