--- a/app/views/hands/show.html.erb
+++ b/app/views/hands/show.html.erb
@@ -1,9 +1,11 @@
 <div class="col-md-12">
 <h4>
+<% if @hand.helpline %><span class="glyphicon glyphicon-phone-alt text-danger"></span><% end %>
 <%= @hand.user.name %><% if @hand.user.group %> (<%= @hand.user.group.name %>)<% end %>
 <% if @hand.done %>
 <span class="badge pull-right">done</span>
-<% end %><br>
+<% end %>
+<br>
 <small><%= @hand.location or "no location" %>, <%= time_ago_in_words(@hand.created_at) %> ago</small>
 </h4>
 
@@ -15,7 +17,7 @@
 			
 <p><%= button_to('Student not found, remove.', {controller: 'hands', action: 'done', id: @hand.id, success: false}, method: :post, class: 'btn btn-default btn-block', data: { confirm: 'Sure to delete?' })%></p>
 
-<p><%= link_to("Back to list", {controller: 'hands', action: 'index'}, class: 'btn btn-default btn-block' ) %></p>
+<p><%= button_to("Back to list", {controller: 'hands', action: 'index'}, method: :get, class: 'btn btn-default btn-block' ) %></p>
 
 <% else %>
 
@@ -45,6 +47,8 @@
 <p><button type="submit" class="btn btn-primary btn-block">I'm done with this one</button></p>
 
 <p><%= link_to('Student not found, remove.', {controller: 'hands', action: 'done', id: @hand.id, success: false}, method: :post, class: 'btn btn-warning btn-block', data: { confirm: 'Sure to delete?' })%></p>
+
+<p><%= link_to('I can\'t answer the question immediately, student needs helpline.', { controller: 'hands', action: 'helpline', id: @hand.id }, method: :post, class: 'btn btn-danger btn-block', data: { confirm: 'Are you sure that someone is available for extra help?' })%></p>
 
 
 <% end %>
