--- a/app/views/layouts/hands.html.erb
+++ b/app/views/layouts/hands.html.erb
@@ -25,7 +25,7 @@
 
 <body>
 	<%= render 'layouts/navbar' %>
-	<div id="content" class="container limit-width">
+	<div id="content" class="container limit-width" style="padding:0">
 <% if flash[:alert] %>
 <div class="alert alert-danger alert-dismissible">
 	<button type="button" class="close" data-dismiss="alert">&times;</button>
