--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -39,10 +39,14 @@
 	background-color: #223839;
 }
 
-.navbar a
+.navbar-header a, .navbar-default .navbar-nav > li > a
 {
-	color:white;
+	color:white !important;
 }
+
+//.navbar-default .navbar-nav > li > a {
+//
+//}
 
 .navbar .empty
 {
