--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
 	</ul>
 </nav>
 		
-<nav id="main-nav" class="navbar navbar-inverse">
+<nav id="main-nav" class="navbar navbar-default">
 	<div class="container">
 			
 		<div class="navbar-header">
