--- a/app/views/hands/student.html.erb
+++ b/app/views/hands/student.html.erb
@@ -15,17 +15,17 @@
 		
 <p>
 	<div class="btn-group btn-group-justified" data-toggle="buttons">
-		<label class="btn btn-primary">
-			<input type="radio" name="evaluation" value="😄" id="option1" autocomplete="off"> 😄
+		<label class="btn btn-default">
+			<input type="radio" name="evaluation" value="🎉" id="option1" autocomplete="off"> 🎉 done
 		</label>
-		<label class="btn btn-primary">
-			<input type="radio" name="evaluation" value="🙂" id="option2" autocomplete="off"> 🙂
+		<label class="btn btn-default">
+			<input type="radio" name="evaluation" value="👍" id="option2" autocomplete="off"> 👍 strong
 		</label>
-		<label class="btn btn-primary">
-			<input type="radio" name="evaluation" value="😓" id="option2" autocomplete="off"> 😓
+		<label class="btn btn-default">
+			<input type="radio" name="evaluation" value="🚂" id="option2" autocomplete="off"> 🚂 steady
 		</label>
-		<label class="btn btn-primary">
-			<input type="radio" name="evaluation" value="😔" id="option3" autocomplete="off"> 😔
+		<label class="btn btn-default">
+			<input type="radio" name="evaluation" value="😱" id="option3" autocomplete="off"> 😱 slow
 		</label>
 	</div>
 </p>
