--- a/app/views/hands/index.html.erb
+++ b/app/views/hands/index.html.erb
@@ -5,8 +5,12 @@
 	<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item active') do %>
 	<span class="badge"><%= hand.location %></span>
 	<% if hand.helpline %><span class="glyphicon glyphicon-phone-alt text-danger"></span><% end %>
-	<%= hand.user.name %><% if hand.user.group %>  (<%= hand.user.group.name %>)<% end %>
-	<span class="label label-default"><%= hand.user.schedule && hand.user.schedule.name %></span>
+	<%= hand.user.name %>
+	<% if hand.user.group %>
+		(<%= hand.user.group.name %>)
+	<% else %>
+		<span class="label label-default"><%= hand.user.schedule && hand.user.schedule.name %></span>
+	<% end %>
 	<br>
 	<small>Asked a question <%= time_ago_in_words(hand.created_at) %> ago</small>
 	<% end %>
@@ -18,8 +22,12 @@
 	<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item') do %>
 	<span class="badge"><%= hand.location %></span>
 	<% if hand.helpline %><span class="glyphicon glyphicon-phone-alt text-danger"></span><% end %>
-	<%= hand.user.name %><% if hand.user.group %>  (<%= hand.user.group.name %>)<% end %>
-	<span class="label label-default"><%= hand.user.schedule && hand.user.schedule.name %></span>
+	<%= hand.user.name %>
+	<% if hand.user.group %>
+		(<%= hand.user.group.name %>)
+	<% else %>
+		<span class="label label-default"><%= hand.user.schedule && hand.user.schedule.name %></span>
+	<% end %>
 	<br>
 	<small class="text-danger">Asked a question <%= time_ago_in_words(hand.created_at) %> ago</small>
 	<% end %>
@@ -31,9 +39,12 @@
 	<% @long_time_users.each do |user| %>
 	<%= link_to({controller: 'hands', action: 'student', id: user.id}, class: 'list-group-item') do %>
 	<span class="badge"><%= user.last_known_location if not user.last_known_location.blank? %></span>
-	<%= user.name %><% if user.group %>  (<%= user.group.name %>)
+	<%= user.name %>
+	<% if user.group %>
+		(<%= user.group.name %>)
+	<% else %>
+		<span class="label label-default"><%= user.schedule && user.schedule.name %></span>
 	<% end %>
-	<span class="label label-default"><%= user.schedule && user.schedule.name %></span>
 	<br>
 	<small class="text-warning">
 		<% if user.last_spoken_at.blank? %>A new student: give them a warm welcome!
