--- a/app/views/hands/show.html.erb
+++ b/app/views/hands/show.html.erb
@@ -29,7 +29,7 @@
 <p>
 	<div class="btn-group btn-group-justified" data-toggle="buttons">
 		<label class="btn btn-default">
-			<input type="radio" name="evaluation" value="🎉" id="option1" autocomplete="off"> 🎉 done
+			<input required type="radio" name="evaluation" value="🎉" id="option1" autocomplete="off"> 🎉 done
 		</label>
 		<label class="btn btn-default">
 			<input type="radio" name="evaluation" value="👍" id="option2" autocomplete="off"> 👍 strong
