--- a/app/views/hands/student.html.erb
+++ b/app/views/hands/student.html.erb
@@ -3,7 +3,12 @@
 	<small>was seen on this site <%= @user.last_seen_at ? time_ago_in_words(@user.last_seen_at) : 'never??' %> ago</small>
 </h4>
 
-<p>Please say some nice words to this new student and ask if they have everything they need to get started. Also show them the "ask" functionality on the website.<br> If they have questions, make sure that they send an e-mail, but also summarize below.</p>
+<p>
+	Ask this student what they are working on right now. Let them explain a bit.
+	<br>
+	If this student is new, please welcome them and show the "Ask" button on the website.
+	Refer them to help@mprog.nl for practical matters.
+</p>
 
 <%= form_tag(controller: :hands, action: :welcomed, id: @user.id) do %>
 
@@ -14,7 +19,7 @@
 <p>
 	<div class="btn-group btn-group-justified" data-toggle="buttons">
 		<label class="btn btn-default">
-			<input type="radio" name="evaluation" value="🎉" id="option1" autocomplete="off"> 🎉 done
+			<input required type="radio" name="evaluation" value="🎉" id="option1" autocomplete="off"> 🎉 done
 		</label>
 		<label class="btn btn-default">
 			<input type="radio" name="evaluation" value="👍" id="option2" autocomplete="off"> 👍 strong
