submit more visible

--- a/app/views/page/_content.html.erb
+++ b/app/views/page/_content.html.erb
@@ -16,7 +16,7 @@
 	<section id="submit-content" class="visible-sm-block visible-md-block visible-lg-block">
 		<%= render 'submit_tab' %>
 	</section>
-	<section id="submit-content">
+	<section id="submit-content" class="visible-xs-block">
 		<h1>Submit</h1>
 		<p>You can't submit on mobile, sorry. If you're on desktop, increase your browser width to submit!</p>
 	</section>
