--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -32,7 +32,7 @@
 
 @media (min-width: $screen-sm-min)
 {
-	#content p, #content ul, #contant ol
+	#content > p, #content > ul, #content > ol
 	{
 	    max-width:75%;
 	}
